--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
 
 dependencies {
     compile 'net.java.dev.jna:jna:4.4.0'
+    examplesCompile compileJava.classpath
 }
 
 wrapper {
