--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,13 @@ version '1.2'
 
 apply plugin: 'java'
 
-
+sourceSets {
+    examples {
+        compileClasspath = main.output
+        runtimeClasspath = main.output
+        java.srcDirs = ['examples/java']
+    }
+}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -34,6 +40,7 @@ repositories {
 
 dependencies {
     compile 'net.java.dev.jna:jna:4.4.0'
+    examplesCompile compileJava.classpath
 }
 
 wrapper {
