--- a/build.gradle
+++ b/build.gradle
@@ -96,8 +96,8 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 bintray {
-    user = bintrayUsername
-    key = bintrayApiKey
+    user = getProjectProperty('bintrayUsername')
+    key = getProjectProperty('bintrayApiKey')
     publications = ["BintrayRelease"]
     pkg {
         repo = 'maven'
