--- a/build.gradle
+++ b/build.gradle
@@ -17,26 +17,12 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'com.jfrog.bintray' version '1.7.3'
-    id 'org.jetbrains.kotlin.jvm' version '1.2.0'
-    id 'com.github.johnrengelman.shadow' version '2.0.1'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'com.github.johnrengelman.shadow' version '4.0.4'
 }
 
 group 'club.minnced'
 version '2.0.2'
-
-publishing {
-    publications {
-        BintrayRelease(MavenPublication) {
-            from components.java
-            groupId group
-            artifactId archivesBaseName
-            version version
-
-            artifact javadocJar
-            artifact sourcesJar
-        }
-    }
-}
 
 sourceSets {
     examples {
@@ -57,12 +43,8 @@ dependencies {
     api 'net.java.dev.jna:jna:4.4.0'
     implementation 'club.minnced:discord-rpc-release:v3.4.0'
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
-    examplesCompile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.0'
+    examplesCompile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.21'
     examplesCompile compileJava.classpath
-}
-
-wrapper {
-    gradleVersion = '4.6'
 }
 
 tasks.withType(JavaCompile) {
@@ -93,7 +75,8 @@ javadoc {
     failOnError = false
     options.author()
     options.encoding = 'UTF-8'
-    options.addStringOption('-html5') // jdk-9 docs
+    if (JavaVersion.current().java9Compatible)
+        options.addBooleanOption('html5', true) // jdk-9 docs
 
     dependsOn sources
     source = sources.destinationDir
@@ -107,6 +90,20 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
+}
+
+publishing {
+    publications {
+        BintrayRelease(MavenPublication) {
+            from components.java
+            groupId group
+            artifactId archivesBaseName
+            version version
+
+            artifact javadocJar
+            artifact sourcesJar
+        }
+    }
 }
 
 bintray {
