--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ javadoc {
     options.encoding = 'UTF-8'
     if (JavaVersion.current().java9Compatible)
         options.addBooleanOption('html5', true) // jdk-9 docs
+    options.links("https://java-native-access.github.io/jna/4.2.1/", "https://docs.oracle.com/javase/8/docs/api/")
 
     dependsOn sources
     source = sources.destinationDir
